<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:text="@string/enter_name" />

    <TextView
        android:id="@+id/enterName"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/your_name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.22"
        android:ems="10" />

    <TextView
        android:id="@+id/enterPassword"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.26"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/login" />

    <TextView
        android:id="@+id/noaccount"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text="@string/no_account" />

  <Button
      android:id="@+id/registerButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      android:text="@string/register" />

</LinearLayout>